--- a/evaluacin.html
+++ b/evaluacin.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Unidad 2: MOVIMIENTO | CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA </title>
+<title>Evaluación | CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="PROF. JOE MENA" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -16,25 +16,25 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-<body class="exe-web-site" id="exe-node-6"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-21"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent">CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">CIENCIAS DE LA NATURALEZA DE 3° SECUNDARIA</a></li>
-   <li><a href="unidad_1_naturaleza_de_la_ciencia.html" class="daddy">Unidad 1: NATURALEZA DE LA CIENCIA</a>
-   <ul class="other-section">
+   <li class="current-page-parent"><a href="unidad_1_naturaleza_de_la_ciencia.html" class="current-page-parent daddy">Unidad 1: NATURALEZA DE LA CIENCIA</a>
+   <ul>
       <li><a href="tema_1_ciencia_y_mtodo_cientfico.html" class="no-ch">Tema 1: Ciencia y método científico</a></li>
       <li><a href="tema_2_modelos_principios_leyes_y_teoras_cientficas.html" class="no-ch">Tema 2: Modelos, principios, leyes y teorías científicas</a></li>
       <li><a href="tema_3_estndares_magnitudes_y_unidades.html" class="no-ch">Tema 3: Estándares, magnitudes y unidades</a></li>
       <li><a href="tema_4_sistema_de_conversiones.html" class="no-ch">Tema 4: Sistema de conversiones</a></li>
       <li><a href="tema_5_errores.html" class="no-ch">Tema 5: Errores</a></li>
-      <li><a href="evaluacin.html" class="no-ch">Evaluación</a></li>
+      <li id="active"><a href="evaluacin.html" class="active no-ch">Evaluación</a></li>
    </ul>
    </li>
-   <li id="active"><a href="unidad_2_movimiento.html" class="active daddy">Unidad 2: MOVIMIENTO</a>
-   <ul>
+   <li><a href="unidad_2_movimiento.html" class="daddy">Unidad 2: MOVIMIENTO</a>
+   <ul class="other-section">
       <li><a href="tema_6_magnitudes_del_movimiento_posicin_trayectoria_y_desplazamiento.html" class="no-ch">Tema 6: Magnitudes del movimiento: posición, trayectoria y desplazamiento</a></li>
       <li><a href="tema_7_magnitudes_del_movimiento_velocidad_y_rapidez.html" class="no-ch">Tema 7: Magnitudes del movimiento: velocidad y rapidez</a></li>
       <li><a href="tema_8_movimientos_rectilneos.html" class="no-ch">Tema 8: Movimientos rectilíneos</a></li>
@@ -54,12 +54,44 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="evaluacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="tema_6_magnitudes_del_movimiento_posicin_trayectoria_y_desplazamiento.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="tema_5_errores.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="unidad_2_movimiento.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Unidad 2: MOVIMIENTO</h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">Evaluación</h1></header>
+<article class="iDevice_wrapper FreeTextIdevice" id="id31">
+<div class="iDevice emphasis0">
+<div id="ta31_85" class="block iDevice_content">
+<p style="text-align: justify;"><strong>Parte 1.</strong> Preguntas y respuestas<br />■ Responde.<br />• ¿Cuáles son las etapas del método científico y cómo se relacionan entre sí?<br />• ¿Cuál es la importancia de la experimentación en una investigación?<br />• ¿De qué manera contribuyen las conclusiones de una investigación al avance del conocimiento?<br />• ¿Cuáles son las implicaciones de la incertidumbre en la investigación científica?</p>
+<p style="text-align: justify;"><strong>Parte 2.</strong> Selección múltiple<br />■ Responde en tu cuaderno las opciones que consideres correctas en cada caso.</p>
+<div class="exe-layout-3-cols exe-clear">
+<div class="exe-col exe-col-1" style="text-align: justify;">
+<p>• Los pasos del método científico son:<br />- Conclusión<br />- Observación<br />- Método<br />- Hipótesis<br />- Experimentación</p>
+</div>
+<div class="exe-col exe-col-2" style="text-align: justify;">
+<p>• Los errores en la medición pueden ser:<br />- Primarios<br />- Secundarios<br />- Absolutos<br />- Terciarios<br />- Relativos.</p>
+</div>
+<div class="exe-col exe-col-3">
+<p style="text-align: justify;">• Los modelos son esquemas o representaciones de:<br />- Leyes<br />- Eventos<br />- Ideas<br />- Procesos <br />- Objetos reales.</p>
+</div>
+</div>
+<p><strong>Parte 3</strong><br />■ Expresa en notación científica o en cifras significativas las siguientes cantidades:</p>
+<div class="exe-layout-3-cols exe-clear">
+<div class="exe-col exe-col-1">
+<p>• 1,200,000,000<br />• 0.000000034<br />• 0.01</p>
+</div>
+<div class="exe-col exe-col-2">
+<p>• 0,130<br />• 0.01<br />• 0.130</p>
+</div>
+<div class="exe-col exe-col-3">
+<p>• 635<br />• 0.0022<br />• 5,700</p>
+</div>
+</div>
+<p></p>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
@@ -67,7 +99,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="evaluacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="tema_6_magnitudes_del_movimiento_posicin_trayectoria_y_desplazamiento.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="tema_5_errores.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="unidad_2_movimiento.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
