--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>CIENCIAS NATURALES TERCERO DE SEUNDRIA </title>
+<title>CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="PROF. JOE MENA" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -20,10 +20,10 @@
 <body class="exe-web-site" id="exe-node-0"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">CIENCIAS NATURALES TERCERO DE SEUNDRIA</div></header>
+<header id="header" ><div id="headerContent">CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA</div></header>
 <nav id="siteNav">
 <ul>
-   <li id="active"><a href="index.html" class="active daddy main-node">CIENCIAS DE LA NATURALEZA 3°</a></li>
+   <li id="active"><a href="index.html" class="active daddy main-node">CIENCIAS DE LA NATURALEZA DE 3° SECUNDARIA</a></li>
    <li><a href="unidad_1_naturaleza_de_la_ciencia.html" class="daddy">Unidad 1: NATURALEZA DE LA CIENCIA</a>
    <ul class="other-section">
       <li><a href="tema_1_ciencia_y_mtodo_cientfico.html" class="no-ch">Tema 1: Ciencia y método científico</a></li>
@@ -31,6 +31,7 @@
       <li><a href="tema_3_estndares_magnitudes_y_unidades.html" class="no-ch">Tema 3: Estándares, magnitudes y unidades</a></li>
       <li><a href="tema_4_sistema_de_conversiones.html" class="no-ch">Tema 4: Sistema de conversiones</a></li>
       <li><a href="tema_5_errores.html" class="no-ch">Tema 5: Errores</a></li>
+      <li><a href="evaluacin.html" class="no-ch">Evaluación</a></li>
    </ul>
    </li>
    <li><a href="unidad_2_movimiento.html" class="daddy">Unidad 2: MOVIMIENTO</a>
@@ -59,7 +60,22 @@
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">CIENCIAS DE LA NATURALEZA 3°</h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">CIENCIAS DE LA NATURALEZA DE 3° SECUNDARIA</h1></header>
+<article class="iDevice_wrapper FreeTextIdevice" id="id30">
+<div class="iDevice emphasis0">
+<div id="ta30_85" class="block iDevice_content">
+<div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear">
+<div class="exe-col exe-col-1">
+<p><strong>Competencias Fundamentales</strong></p>
+<p>Competencia Ética y Ciudadana<br />Competencia Comunicativa<br />Competencia de Pensamiento Lógico, Creativo y Crítico</p>
+</div>
+<div class="exe-col exe-col-2">
+<p>Competencia de Resolución de Problemas<br />Competencia Científica y Tecnológica<br />Competencia Ambiental y de la Salud<br />Competencia de Desarrollo Personal y Espiritual</p>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
