--- a/tema_11_fuerza.html
+++ b/tema_11_fuerza.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Tema 11: Fuerza | CIENCIAS NATURALES TERCERO DE SEUNDRIA </title>
+<title>Tema 11: Fuerza | CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="PROF. JOE MENA" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,10 +19,10 @@
 <body class="exe-web-site" id="exe-node-11"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">CIENCIAS NATURALES TERCERO DE SEUNDRIA</div></header>
+<header id="header" ><div id="headerContent">CIENCIAS DE LA NATURALEZA DE TERCERO DE SEUNDRIA</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">CIENCIAS DE LA NATURALEZA 3°</a></li>
+   <li><a href="index.html" class="daddy main-node">CIENCIAS DE LA NATURALEZA DE 3° SECUNDARIA</a></li>
    <li><a href="unidad_1_naturaleza_de_la_ciencia.html" class="daddy">Unidad 1: NATURALEZA DE LA CIENCIA</a>
    <ul class="other-section">
       <li><a href="tema_1_ciencia_y_mtodo_cientfico.html" class="no-ch">Tema 1: Ciencia y método científico</a></li>
@@ -30,6 +30,7 @@
       <li><a href="tema_3_estndares_magnitudes_y_unidades.html" class="no-ch">Tema 3: Estándares, magnitudes y unidades</a></li>
       <li><a href="tema_4_sistema_de_conversiones.html" class="no-ch">Tema 4: Sistema de conversiones</a></li>
       <li><a href="tema_5_errores.html" class="no-ch">Tema 5: Errores</a></li>
+      <li><a href="evaluacin.html" class="no-ch">Evaluación</a></li>
    </ul>
    </li>
    <li><a href="unidad_2_movimiento.html" class="daddy">Unidad 2: MOVIMIENTO</a>
